--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "nyt-backend-books-and-movies",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/SergioIglesiasPicallo/NYT-Backend-Books-And-Movies.git",
   "license": "MIT",
+  "scripts": {
+    "dev":"nodemon ./src/index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
