feat: fixing api routes and configuration

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 API_KEY=HAUwjzcIlxZLK3XhqiBeDaaBoKADFkF8
+PORT =3001
+
+TOKEN_SECRET=123456
 
 
 https://api.nytimes.com/svc/books/v3/lists/current/hardcover-fiction.json?api-key=HAUwjzcIlxZLK3XhqiBeDaaBoKADFkF8
